# Rim

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
assets/: disc.py  genai.sh  vertex.sh
rim/: Cargo.toml
rim-cli/: Cargo.toml
rim-cli/src/: cli.rs  conf.rs  lib.rs
rim/src/: client.rs  lib.rs  media.rs
rim/src/client/: base.rs  config.rs  mod.rs
rim/src/llm/: google.rs  mod.rs
rim/src/modality/: image.rs  media.rs  mod.rs
rim/src/model/: google.rs  openai.rs
rim/src/utils/: image.rs  mod.rs  video.rs
rimc/: Cargo.toml
rimc-cli/: Cargo.toml
rimc-cli/src/: cli.rs
rimc/src/: lib.rs
