[package]
name = "rim-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
librim = { path = "../rim" }
clap = { version= "4.5.4", features=["derive"] }
toml = { version = "0.8.12"}

[[bin]]
name = "rim"
path = "src/cli.rs"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=+crt-static"]
