[package]
name = "librim"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json", "http2", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["rt", "fs"] }
tokio-stream = "0.1.15"
md-5 = "0.10.6"
image = "0.25.1"
base64 = "0.22.0"

[lib]
name = "librim"
path = "src/lib.rs"
