[package]
name = "librim"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "json", "rustls-tls"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "fs"] }
serde_json = { version = "1.0.116" }
futures = "0.3.30"
base64 = "0.22.0"

[lib]
name = "librim"
path = "src/lib.rs"
