[package]
name = "librim"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "json", "rustls-tls"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "fs"] }
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
ffmpeg-next = { version = "7.0.2", features=["build"] }
indicatif = "0.17.8"
futures = "0.3.30"
infer = "0.16.0"
image = "0.25.1"
base64 = "0.22.1"
toml = "0.8.14"

[lib]
name = "librim"
path = "src/lib.rs"
